fixed color contrast
fixed color contrast

--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,7 @@ body {
 h1 {
     font-family: "Bebas Neue", sans-serif;
     font-weight: 400;
-    color:rgb(240, 180, 198);
+    color:#F7CFDA;
     text-align: center;
     font-size: 20vw;
     margin-top: 200px;
@@ -413,7 +413,7 @@ section p{
 }
 
 .form-section  {
-  background-color: rgb(131, 80, 151);
+  background-color: #9468AC;
 }
 
 form {
